Added manually implemented authentication service

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data source=dating.db"
+  },
+  "Token": "This is my super secure unguessable signing key",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
